--- a/views/index.ejs
+++ b/views/index.ejs
@@ -1,1 +1,4 @@
-<p>home page content</p>
+<h1>home page content</h1>
+<a href="/menu/large">large menu</a>
+<a href="/menu/medium">medium menu</a>
+<a href="/menu/fries">fries menu</a>
