done with the cards section , left over work is cards description

--- a/views/blog.ejs
+++ b/views/blog.ejs
@@ -1,1 +1,10 @@
-<h1>this is blog page content</h1>
+<nav class="navbar bg-body-tertiary ">
+    <div class="container-fluid d-flex justify-content-center align-items-center">
+      <span class="navbar-brand mb-0 h1">My blog</span>
+    </div>
+  </nav>
+  
+  <!-- blog code  -->
+  <div class="container-fluid">
+    <img src="img/gif/food-street3-ezgif.com-loop-count.gif" style="width:100%" alt="Gif for waflles comming soon animation">
+  </div>
