--- a/views/franchise.ejs
+++ b/views/franchise.ejs
@@ -1,1 +1,3 @@
 <h1>this is franchise content</h1>
+<p>contact Varun pikkala / socials for franchise</p>
+<p>for website designs /code contact Arun Pikkala</p>
