--- a/views/index.ejs
+++ b/views/index.ejs
@@ -1,4 +1,167 @@
-<h1>home page content</h1>
-<a href="/menu/large">large menu</a>
-<a href="/menu/medium">medium menu</a>
-<a href="/menu/fries">fries menu</a>
+    <!-- data-bs-ride="true" -->
+    <!-- carousel -->
+    <div
+      id="carouselExampleCaptions"
+      class="carousel slide"
+      data-bs-ride="carousel"
+    >
+      <div class="carousel-indicators">
+        <button
+          type="button"
+          data-bs-target="#carouselExampleCaptions"
+          data-bs-slide-to="0"
+          class="active"
+          aria-current="true"
+          aria-label="Slide 1"
+        ></button>
+        <button
+          type="button"
+          data-bs-target="#carouselExampleCaptions"
+          data-bs-slide-to="1"
+          aria-label="Slide 2"
+        ></button>
+        <button
+          type="button"
+          data-bs-target="#carouselExampleCaptions"
+          data-bs-slide-to="2"
+          aria-label="Slide 3"
+        ></button>
+      </div>
+      <div class="carousel-inner">
+        <div class="carousel-item active" data-bs-interval="3000">
+          <img src="img/images/default.webp" class="d-block w-100" alt="image for carousel slide 1"  />
+          <div class="carousel-caption d-md-block">
+            <h5 id="arunchtr">First slide label</h5>
+            <p id="aruncdtr">
+              Some representative placeholder content for the first slide.
+            </p>
+          </div>
+        </div>
+        <div class="carousel-item" data-bs-interval="3000">
+          <img src="img/images/default.webp" class="d-block w-100" alt="image for carousel slide 2" />
+          <div class="carousel-caption d-md-block">
+            <h5 id="arunchtr">Second slide label</h5>
+            <p id="aruncdtr">
+              Some representative placeholder content for the second slide.
+            </p>
+          </div>
+        </div>
+        <div class="carousel-item" data-bs-interval="3000">
+          <img src="img/images/default.webp" class="d-block w-100" alt="image for carousel slide 3" />
+          <div class="carousel-caption d-md-block">
+            <h5 id="arunchtr">Third slide label</h5>
+            <p id="aruncdtr">
+              Some representative placeholder content for the third slide.
+            </p>
+          </div>
+        </div>
+      </div>
+      <button
+        class="carousel-control-prev"
+        type="button"
+        data-bs-target="#carouselExampleCaptions"
+        data-bs-slide="prev"
+      >
+        <span class="carousel-control-prev-icon" aria-hidden="true"></span>
+        <span class="visually-hidden">Previous</span>
+      </button>
+      <button
+        class="carousel-control-next"
+        type="button"
+        data-bs-target="#carouselExampleCaptions"
+        data-bs-slide="next"
+      >
+        <span class="carousel-control-next-icon" aria-hidden="true"></span>
+        <span class="visually-hidden">Next</span>
+      </button>
+    </div>
+<!-- hero__section_container logo and searchbar -->
+    
+
+
+<!-- cards system for menu catogeries -->
+
+
+
+<div class="container-fluid container_weoffer">
+
+  <p class="h4 d-flex justify-content-center">MENU</p>
+  <div class="sub__heading_container">
+    <span>description for manu catogeries</span>
+    <span>Choose location <i class="fa-solid fa-location-dot" style="color: #ff5a3d;"></i></span>
+  </div>
+
+<div class="container-fluid we__offer d-flex justify-content-evenly">
+
+ <a href="/we_offer/large" style="text-decoration: none;"> 
+  <div class="card" style="width: 18rem;">
+  <img src="img/images/default.webp" class="card-img-top" alt="...">
+  <div class="card-body">
+    <h5 class="card-title">popsicle large waffles</h5>
+  </div>
+</div>
+</a>
+
+  <a href="/we_offer/medium" style="text-decoration: none;">
+    <div class="card" style="width: 18rem;">
+      <img src="img/images/default.webp" class="card-img-top" alt="...">
+      <div class="card-body">
+        <h5 class="card-title">popsicle medium waffles</h5>
+        
+      </div>
+    </div>
+  </a>
+
+  <a href="/we_offer/fries" style="text-decoration: none;">
+    <div class="card" style="width: 18rem;">
+      <img src="img/images/default.webp" class="card-img-top" alt="...">
+      <div class="card-body " >
+        <h5 class="card-title">other</h5>
+      </div>
+    </div>
+  </a>
+
+</div>
+  
+</div>
+
+<!-- cards system for undertaking offers -->
+
+
+
+<div class="container-fluid container_weoffer">
+  <p class="h4 d-flex justify-content-center">We Offer</p>
+
+<div class="container-fluid we__offer d-flex justify-content-evenly">
+
+  <a href="/we_offer/dining" style="text-decoration: none;">
+    <div class="card" style="width: 18rem;">
+        <img src="img/images/default.webp" class="card-img-top" alt="...">
+        <div class="card-body">
+          <h5 class="card-title">dining</h5>
+        </div>
+      </div>
+    </a>
+
+    <a href="/we_offer/online_orders" style="text-decoration: none;">
+        <div class="card" style="width: 18rem;">
+            <img src="img/images/default.webp" class="card-img-top" alt="...">
+            <div class="card-body">
+                <h5 class="card-title">online orders</h5>
+          
+        </div>
+      </div>
+    </a>
+
+  <a href="/we_offer/event_hosting" style="text-decoration: none;">
+    <div class="card" style="width: 18rem;">
+        <img src="img/images/default.webp" class="card-img-top" alt="...">
+        <div class="card-body " >
+          <h5 class="card-title">party/event hosting</h5>
+        </div>
+    </div>
+    </a>
+
+</div>
+  
+</div>
