--- a/views/layouts/cards_section.ejs
+++ b/views/layouts/cards_section.ejs
@@ -4,10 +4,10 @@
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <!-- icon  -->
-    <link rel="apple-touch-icon" sizes="180x180" href="img/images/favicon_io/apple-touch-icon.png">
-    <link rel="icon" type="image/png" sizes="32x32" href="img/images/favicon_io/favicon-32x32.png">
-    <link rel="icon" type="image/png" sizes="16x16" href="img/images/favicon_io/favicon-32x32.png">
-    <link rel="manifest" href="img/images/favicon_io/site.webmanifest">
+    <link rel="apple-touch-icon" sizes="180x180" href="..../img/images/favicon_io/apple-touch-icon.png">
+    <link rel="icon" type="image/png" sizes="32x32" href="..../img/images/favicon_io/favicon-32x32.png">
+    <link rel="icon" type="image/png" sizes="16x16" href="..../img/images/favicon_io/favicon-32x32.png">
+    <link rel="manifest" href="..../img/images/favicon_io/site.webmanifest">
 
     <!-- fontawesome icons cdn  -->
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.1/css/all.min.css" integrity="sha512-DTOQO9RWCH3ppGqcWaEA1BIZOC6xxalwEsw9c2QQeAIftl+Vegovlnee1c9QX4TctnWMn13TZye+giMm8e2LwA==" crossorigin="anonymous" referrerpolicy="no-referrer" />
@@ -16,16 +16,14 @@
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-T3c6CoIi6uLrA9TneNEoa7RxnatzjcDSCmG1MXxSR1GAsXEV/Dwwykc2MPK8M2HN" crossorigin="anonymous">
     
     <title><%- title %></title>
-    <link rel="stylesheet" href="css/styles.css">
+    <link rel="stylesheet" href="..../css/styles.css">
 </head>
 <body data-bs-theme="dark">
-
     <%- include('../partials/header.ejs') %>
     <main><%- body %></main>
     <%- include('../partials/footer.ejs') %>
-
 <!-- personal javascrip link  -->
-<script src="js/index.js" async></script>
+<script src="..../public/js/index.js" async></script>
 <!-- bootstrao js cdn  -->
 
 </body>
