--- a/views/partials/header.ejs
+++ b/views/partials/header.ejs
@@ -2,21 +2,25 @@
 <nav class="navbar navbar-expand-md bg-body-tertiary">
       
     <div class="container-fluid">
-      <li class="nav-item toggle__switch">
-        <div class="form-check form-switch mx-4">
-          <input
-            class="form-check-input p-2"
-            type="checkbox"
-            role="switch"
-            id="flexSwitchCheckChecked"
-            checked
-            onclick="myFunction()"
-          />
-        </div>
-      </li>
+      <a href="/search"><i class="fa-solid fa-magnifying-glass"></i></a>
       <a class="navbar-brand" href="/">CCW</a>
       
-      <button
+      <div class="container_fluid d-flex align-items-center justify-content-center">
+
+        <li class="nav-item toggle__switch " style="list-style-type: none;">
+          <div class="form-check form-switch mx-4">
+            <input
+              class="form-check-input p-2"
+              type="checkbox"
+              role="switch"
+              id="flexSwitchCheckChecked"
+              checked
+              onclick="myFunction()"
+            />
+          </div>
+        </li>
+
+        <button
         class="navbar-toggler"
         type="button"
         data-bs-toggle="collapse"
@@ -27,6 +31,9 @@
       >
         <span class="navbar-toggler-icon"></span>
       </button>
+      </div>
+
+      
       <div
         class="collapse navbar-collapse d-xxl-flex d-xl-flex d-md-flex d-lg-flex justify-content-end"
         id="navbarNav"
@@ -53,3 +60,6 @@
       </div>
     </div>
   </nav>
+
+  <script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.11.8/dist/umd/popper.min.js" integrity="sha384-I7E8VVD/ismYTF4hNIPjVp/Zjvgyol6VFvRkX/vR+Vc4jQkC+hVqc2pM8ODewa9r" crossorigin="anonymous" ></script>
+<script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.min.js" integrity="sha384-BBtl+eGJRgqQAUMxJ7pMwbEyER4l1g+O15P+16Ep7Q9Q+zqX6gSbd85u4mG4QzX+" crossorigin="anonymous"></script>
