--- a/views/search.ejs
+++ b/views/search.ejs
@@ -1,1 +1,59 @@
 <h1>search functionality</h1>
+
+
+
+<div class="container-fluid we__offer d-flex justify-content-evenly">
+
+<%- include('./large_waffle/item1.ejs') %>
+
+<%- include('./large_waffle/item2.ejs') %>
+
+<%- include('./large_waffle/item3.ejs') %>
+
+<%- include('./large_waffle/item4.ejs') %>
+
+<%- include('./large_waffle/item5.ejs') %>
+
+<%- include('./large_waffle/item6.ejs') %>
+
+<%- include('./large_waffle/item7.ejs') %>
+
+<%- include('./large_waffle/item8.ejs') %>
+
+<%- include('./large_waffle/item9.ejs') %>
+
+<%- include('./large_waffle/item10.ejs') %>
+
+<%- include('./large_waffle/item11.ejs') %>
+
+<%- include('./large_waffle/item12.ejs') %>
+
+<%- include('./medium_waffle/item1.ejs') %>
+
+<%- include('./medium_waffle/item2.ejs') %>
+
+<%- include('./medium_waffle/item3.ejs') %>
+
+<%- include('./medium_waffle/item4.ejs') %>
+
+<%- include('./medium_waffle/item5.ejs') %>
+
+<%- include('./medium_waffle/item6.ejs') %>
+
+<%- include('./medium_waffle/item7.ejs') %>
+
+<%- include('./medium_waffle/item8.ejs') %>
+
+<%- include('./medium_waffle/item9.ejs') %>
+
+<%- include('./medium_waffle/item10.ejs') %>
+
+<%- include('./medium_waffle/item11.ejs') %>
+
+<%- include('./medium_waffle/item12.ejs') %>
+
+<%- include('./other/item1.ejs') %>
+
+<%- include('./other/item2.ejs') %>
+</div>
+
