done with item naming for images and routes

--- a/views/franchise.ejs
+++ b/views/franchise.ejs
@@ -1,3 +1,4 @@
 <h1>this is franchise content</h1>
-<p>contact Varun pikkala / socials for franchise</p>
+<p>contact Varun pikkala / socials for franchise details</p>
+
 <p>for website designs /code contact Arun Pikkala</p>
