--- a/views/index.ejs
+++ b/views/index.ejs
@@ -29,7 +29,7 @@
       </div>
       <div class="carousel-inner">
         <div class="carousel-item active" data-bs-interval="3000">
-          <img src="img/images/default.webp" class="d-block w-100" alt="image for carousel slide 1"  />
+          <img src="img/images/carousel/c1.webp" class="d-block w-100" alt="image for carousel slide 1"  />
           <div class="carousel-caption d-md-block">
             <h5 id="arunchtr">First slide label</h5>
             <p id="aruncdtr">
@@ -38,7 +38,7 @@
           </div>
         </div>
         <div class="carousel-item" data-bs-interval="3000">
-          <img src="img/images/default.webp" class="d-block w-100" alt="image for carousel slide 2" />
+          <img src="img/images/carousel/c2.webp" class="d-block w-100" alt="image for carousel slide 2" />
           <div class="carousel-caption d-md-block">
             <h5 id="arunchtr">Second slide label</h5>
             <p id="aruncdtr">
@@ -47,7 +47,7 @@
           </div>
         </div>
         <div class="carousel-item" data-bs-interval="3000">
-          <img src="img/images/default.webp" class="d-block w-100" alt="image for carousel slide 3" />
+          <img src="img/images/carousel/c3.webp" class="d-block w-100" alt="image for carousel slide 3" />
           <div class="carousel-caption d-md-block">
             <h5 id="arunchtr">Third slide label</h5>
             <p id="aruncdtr">
@@ -76,6 +76,20 @@
       </button>
     </div>
 <!-- hero__section_container logo and searchbar -->
+
+<div class="container_fluid hero__section_container p-4 d-flex justify-content-center align-items-center flex-column">
+ 
+
+
+    <p class="fs-3 m-2 text-uppercase fw-semibold">creamy craving waffle</p>
+    <p class="fs-6 m-2" >we serve the best waffles in our area</p>
+    <a href="/search"><input class="form-control m-1 me-2" type="search" style="text-align: center; text-transform: capitalize; text-decoration: none ;" placeholder="Search" aria-label="Search"></a>
+
+
+  </div>
+
+    
+</div>
     
 
 
@@ -95,7 +109,7 @@
 
  <a href="/we_offer/large" style="text-decoration: none;"> 
   <div class="card" style="width: 18rem;">
-  <img src="img/images/default.webp" class="card-img-top" alt="...">
+  <img src="img/images/we_offer/large.webp" class="card-img-top" alt="...">
   <div class="card-body">
     <h5 class="card-title">popsicle large waffles</h5>
   </div>
@@ -104,7 +118,7 @@
 
   <a href="/we_offer/medium" style="text-decoration: none;">
     <div class="card" style="width: 18rem;">
-      <img src="img/images/default.webp" class="card-img-top" alt="...">
+      <img src="img/images/we_offer/medium.webp" class="card-img-top" alt="...">
       <div class="card-body">
         <h5 class="card-title">popsicle medium waffles</h5>
         
@@ -114,7 +128,7 @@
 
   <a href="/we_offer/fries" style="text-decoration: none;">
     <div class="card" style="width: 18rem;">
-      <img src="img/images/default.webp" class="card-img-top" alt="...">
+      <img src="img/images/we_offer/other.webp" class="card-img-top" alt="...">
       <div class="card-body " >
         <h5 class="card-title">other</h5>
       </div>
@@ -136,7 +150,7 @@
 
   <a href="/we_offer/dining" style="text-decoration: none;">
     <div class="card" style="width: 18rem;">
-        <img src="img/images/default.webp" class="card-img-top" alt="...">
+        <img src="img/images/we_offer/dining.webp" class="card-img-top" alt="...">
         <div class="card-body">
           <h5 class="card-title">dining</h5>
         </div>
@@ -145,7 +159,7 @@
 
     <a href="/we_offer/online_orders" style="text-decoration: none;">
         <div class="card" style="width: 18rem;">
-            <img src="img/images/default.webp" class="card-img-top" alt="...">
+            <img src="img/images/we_offer/online.webp" class="card-img-top" alt="...">
             <div class="card-body">
                 <h5 class="card-title">online orders</h5>
           
@@ -155,7 +169,7 @@
 
   <a href="/we_offer/event_hosting" style="text-decoration: none;">
     <div class="card" style="width: 18rem;">
-        <img src="img/images/default.webp" class="card-img-top" alt="...">
+        <img src="img/images/we_offer/event.webp" class="card-img-top" alt="...">
         <div class="card-body " >
           <h5 class="card-title">party/event hosting</h5>
         </div>
