--- a/views/medium_waffle/item10.ejs
+++ b/views/medium_waffle/item10.ejs
@@ -1,6 +1,6 @@
 
 <a href="/card_description/item22" style="text-decoration: none;"><div class="card" style="width: 18rem;">
-  <img src="/img/images/default.webp" class="card-img-top" alt="...">
+  <img src="/img/images/waffle/medium/item10.webp" class="card-img-top" alt="...">
   <div class="card-body">
     <h5 class="card-title">item 10</h5>
     <p class="card-text">short description blah blah Lorem ipsum dolor sit amet consectetur adipisicing elit. Consequatur, nulla!</p>
