--- a/views/partials/footer.ejs
+++ b/views/partials/footer.ejs
@@ -1,3 +1,15 @@
+
+<!-- scrool to top button  -->
+<button
+        type="button"
+        class="btn btn-danger btn-floating btn-lg"
+        id="btn-back-to-top"
+        >
+  <i class="fas fa-arrow-up"></i>
+</button>
+
+
+<!-- footer code starts here -->
 <footer class="text-center text-lg-start bg-body-tertiary text-muted">
 
     <section class="d-flex justify-content-center justify-content-lg-between p-4 border-bottom">
