--- a/public/css/styles.css
+++ b/public/css/styles.css
@@ -163,7 +163,7 @@
   }
   
   .hero__section_container{
-    background-image: url(images/hero.webp);
+    background-color: #a76332;
     justify-content: space-evenly;
     align-items: center;
     background-position: center;
@@ -177,57 +177,8 @@
     left: 0;
   }
   
-  .hero__section_logo{
-    margin-top: 2rem;
-    color: #eee;
-  }
   
-  /* .hero__section_logo  styling for smaller devices*/
-  @media (max-width:330px) {
-    .hero__section_logo h1{
-      display: none;
-    }
-    .hero__section_logo p {
-      display: flex;
-      font-weight: 600;
-    }
-  }
-  @media (min-width: 331px) {
-    .hero__section_logo h1{
-      display: flex;
-    }
-    .hero__section_logo p {
-      display: none;
-    }
-  }
   
-  /* .hero__section_title  styling for smaller devices*/
-  @media (max-width:330px) {
-    .hero__section_title_description h3{
-      display: none;
-    }
-    .hero__section_title_description p {
-      display: flex;
-    }
-  }
-  @media (min-width: 331px) and (max-width:500px) {
-    .hero__section_title_description h3{
-      display: flex;
-      font-size: large;
-    }
-    .hero__section_title_description p {
-      display: none;
-    }
-  }
-  @media (min-width: 500px) {
-    .hero__section_title_description h3{
-      display: flex;
-      font-weight: 400;
-    }
-    .hero__section_title_description p {
-      display: none;
-    }
-  }
   
   
   
@@ -243,48 +194,7 @@
     Bootstrap 4 breakpoints
   */
   
-    .hero__section_input_container{
-      width: 60%;
-    }
-  
-  
-  
-  /* samsang fold device exception width  */
-  @media (min-width: 250px) and (max-width:576px) {
-    .hero__section_input_container {
-      width: 80%;
-      display: flex;
-      flex-direction: column;
-      gap: 1rem;
-    } /*1rem = 16px*/
-  }
-  
-  /* Small devices (landscape phones, 544px and up) */
-  @media (min-width: 576px) {
-    .hero__section_input_container {
-      width: 70%;
-    } /*1rem = 16px*/
-  }
-  
-  
-  @media (min-width: 576px) {
-    .hero__section_container {
-      margin: 1rem auto;
-    } /*1rem = 16px*/
-  }
-  
-  
-  .hero__section_logo{
-  margin: 2vh;
-  }
-  
-  .hero__section_input_container{
-  margin: 1vh 0;
-  }
-  .hero__section_title_description{
-  margin: 1vh 0;
-  color: #eee
-  }
+   
   /* styling for card system of we offer */
   
   .card h5{
