--- a/views/aboutus.ejs
+++ b/views/aboutus.ejs
@@ -2,7 +2,7 @@
  <div class="container_fluid">
     <div class="d-flex justify-content-around">
       <div class="clearfix">
-        <img src="img/images/default.webp" class="col-md-6 float-md-start mb-3 ms-md-3 m-4"  alt="...">
+        <img src="img/images/about/about1.webp" class="col-md-6 float-md-start mb-3 ms-md-3 m-4"  alt="...">
         
        
         <p class="fs-3 fw-semibold m-3">
@@ -11,6 +11,10 @@
          <p class="fw-light m-3">
           At Creamy Craving Waffle, we believe in the magic that happens when crispy meets fluffy, and sweetness meets warmth. Our journey began with a passion for creating delightful waffle experiences that go beyond the ordinary.
           </p>
+
+          <img src="img/images/about/about2.webp" class="col-md-6 float-md-start mb-3 ms-md-3 m-4"  alt="...">
+        
+
           <p class="fs-3 fw-semibold m-3">
           Our Story
           </p>
@@ -18,6 +22,9 @@
           <p class="fw-light m-3 ">
           Inspired by the joy waffles bring to people's lives, we embarked on a mission to bring the perfect waffle to the streets of Narepalli. Founded in 2023, our humble waffle cart started as a dream shared among friends who believed that every moment is better with a waffle in hand.
           </p>
+
+          <img src="img/images/about/about3.webp" class="col-md-6 float-md-start mb-3 ms-md-3 m-4"  alt="...">
+        
 
           <p class="fs-3 fw-semibold m-3" style="width: 16rem;">HIGH VALUES</p>
           <p class="fw-light m-3">our success is not only due fto the quality of work ; its down to attitude, Our approach and the way we treat our customers </p>
@@ -28,6 +35,7 @@
           <p class="fw-light m-3 ">
           We are more than just a waffle cart; we are curators of delicious moments. Each waffle we serve is a piece of edible art, crafted with love and attention to detail. From the crispy edges to the soft center, every bite is an experience designed to transport you to a world of indulgence.
           </p>
+
           <p class="fs-3 fw-semibold m-3">
           Quality Ingredients, Unforgettable Taste
           </p>
@@ -35,6 +43,7 @@
           We take pride in using only the finest ingredients to create our waffle masterpieces. Our batter is a closely guarded secret recipe that guarantees the perfect balance of sweetness and texture. Topped with an array of fresh, locally sourced toppings and drizzles, our waffles are a symphony of flavours that dance on your taste buds.
           </p>
           <p class="fs-3 fw-semibold m-3">
+            <img src="img/images/about/about4.webp" class="col-md-6 float-md-start mb-3 ms-md-3 m-4"  alt="...">
           Our Promise to You
           </p>
           <p class="fw-light m-3 ">
