--- a/views/large_waffle/item11.ejs
+++ b/views/large_waffle/item11.ejs
@@ -1,8 +1,8 @@
 
-<a href="/card_description/item2" style="text-decoration: none;"><div class="card" style="width: 18rem;">
-  <img src="/img/images/default.webp" class="card-img-top" alt="...">
+<a href="/card_description/item11" style="text-decoration: none;"><div class="card" style="width: 18rem;">
+  <img src="/img/images/waffle/large/item11.webp" class="card-img-top" alt="...">
   <div class="card-body">
-    <h5 class="card-title">item 2</h5>
+    <h5 class="card-title">item 11</h5>
     <p class="card-text">short description blah blah Lorem ipsum dolor sit amet consectetur adipisicing elit. Consequatur, nulla!</p>
     
   </div>
