--- a/views/large_waffle/item3.ejs
+++ b/views/large_waffle/item3.ejs
@@ -1,7 +1,7 @@
 
 
 <a href="/card_description/item3" style="text-decoration: none;"><div class="card" style="width: 18rem;">
-  <img src="/img/images/default.webp" class="card-img-top" alt="...">
+  <img src="/img/images/waffle/large/item3.webp" class="card-img-top" alt="...">
   <div class="card-body">
     <h5 class="card-title">item 3</h5>
     <p class="card-text">short description blah blah Lorem ipsum dolor sit amet consectetur adipisicing elit. Consequatur, nulla!</p>
