--- a/views/search.ejs
+++ b/views/search.ejs
@@ -1,10 +1,22 @@
-<h1>search functionality</h1>
+<div class="container-fluid">
+  <div class="container">
+    <!-- search form  -->
+    <div class="search m-4">
+      <form class="d-flex search" role="search">
+        <input
+          class="form-control me-2"
+          name=""
+          type="text"
+          id="find"
+          placeholder="Search"
+          aria-label="Search"
+          onkeyup="search()"
+        />
+      </form>
+    </div>
 
-
-
-<div class="container-fluid we__offer d-flex justify-content-evenly">
-
-<%- include('./large_waffle/item1.ejs') %>
+    <div class="product-list container-fluid we__offer ">
+      <%- include('./large_waffle/item1.ejs') %>
 
 <%- include('./large_waffle/item2.ejs') %>
 
@@ -51,9 +63,23 @@
 <%- include('./medium_waffle/item11.ejs') %>
 
 <%- include('./medium_waffle/item12.ejs') %>
-
-<%- include('./other/item1.ejs') %>
-
-<%- include('./other/item2.ejs') %>
+    </div>
+  </div>
 </div>
 
+<script type="text/javascript">
+  function search() {
+    let filter = document.getElementById("find").value.toUpperCase();
+    let item = document.querySelectorAll(".card");
+    let l = document.getElementsByTagName("h5");
+    for (var i = 0; i <= l.length; i++) {
+      let a = item[i].getElementsByTagName("h5")[0];
+      let value = a.innerHTML || a.innerText || a.textContent;
+      if (value.toUpperCase().indexOf(filter) > -1) {
+        item[i].style.display = "";
+      } else {
+        item[i].style.display = "none";
+      }
+    }
+  }
+</script>
