update the file for issue handeling

--- a/views/index.ejs
+++ b/views/index.ejs
@@ -2,8 +2,9 @@
     <!-- carousel -->
     <div
       id="carouselExampleCaptions"
-      class="carousel slide"
+      class="carousel slide my-1"
       data-bs-ride="carousel"
+      style="aspect-ratio: 4/2;"
     >
       <div class="carousel-indicators">
         <button
@@ -77,7 +78,7 @@
     </div>
 <!-- hero__section_container logo and searchbar -->
 
-<div class="container_fluid hero__section_container p-4 d-flex justify-content-center align-items-center flex-column">
+<div class="container_fluid hero__section_container p-4 d-flex justify-content-evenly align-items-center flex-column my-1" style="aspect-ratio: 4/3;">
  
 
 
