--- a/views/aboutus.ejs
+++ b/views/aboutus.ejs
@@ -56,6 +56,22 @@
           Thank you for being a part of our story. Join us at Creamy Craving Waffle and let's create sweet memories together. Follow the irresistible aroma of freshly baked waffles and discover the joy that comes from indulging in the simple pleasures of life.
           </p>
 
+          <p class="fs-3 fw-semibold m-3">
+            web bugs and fixes 
+            </p>
+            <p class="fw-light m-3 ">
+            this is a self coded website from scratch, there might be some issues / bugs /suggestions , please let us know via mail , we will try to fix them as soon as possible.
+            <br>
+            mail : 
+            <a class="m-1" style="text-decoration: none; " href="mailto:pikkalaarunkumar@gmail.com?cc=CC@gmail.com&bcc=Bcc@gmail.com&subject=Subject%20goes%20here&body=Dear%20Customer%2C%0D%0A%0D%0ALet%20us%20know%20what%20your%20quiries%20are%20and%20our%20team%20will%20get%20back%20to%20you%20as%20soon%20as%20possible%0D%0A%0D%0ABest%20Regards%2C%0D%0ATeam%20CCW">pikkalaarunkumar@gmail.com</a>
+            or 
+            collaborate with me on my github page 
+            <a href="https://github.com/Arunkumar-60/Express" class="me-4 text-reset">
+              <i class="fab fa-github"></i>
+            </a>
+            </p>
+
+
 
       </div>
 
