Update header with no toggle for theme

--- a/views/partials/header.ejs
+++ b/views/partials/header.ejs
@@ -6,8 +6,8 @@
       <a class="navbar-brand" href="/">CCW</a>
       
       <div class="container_fluid d-flex align-items-center justify-content-center">
-
-        <li class="nav-item toggle__switch " style="list-style-type: none;">
+<!-- this is toggle button for theme-->
+        <!-- <li class="nav-item toggle__switch " style="list-style-type: none;">
           <div class="form-check form-switch mx-4">
             <input
               class="form-check-input p-2"
@@ -18,7 +18,7 @@
               onclick="myFunction()"
             />
           </div>
-        </li>
+        </li> -->
 
         <button
         class="navbar-toggler"
