updated few images

--- a/views/index.ejs
+++ b/views/index.ejs
@@ -110,7 +110,7 @@
 
  <a href="/we_offer/large" style="text-decoration: none;"> 
   <div class="card" style="width: 18rem;">
-  <img src="img/images/we_offer/large.webp" class="card-img-top" alt="...">
+  <img src="img/images/we_offer/large.webp" class="card-img-top object-fit-contain " alt="...">
   <div class="card-body">
     <h5 class="card-title">popsicle large waffles</h5>
   </div>
@@ -119,7 +119,7 @@
 
   <a href="/we_offer/medium" style="text-decoration: none;">
     <div class="card" style="width: 18rem;">
-      <img src="img/images/we_offer/medium.webp" class="card-img-top" alt="...">
+      <img src="img/images/we_offer/medium.webp" class="card-img-top object-fit-contain " alt="...">
       <div class="card-body">
         <h5 class="card-title">popsicle medium waffles</h5>
         
@@ -129,7 +129,7 @@
 
   <a href="/we_offer/fries" style="text-decoration: none;">
     <div class="card" style="width: 18rem;">
-      <img src="img/images/we_offer/other.webp" class="card-img-top" alt="...">
+      <img src="img/images/we_offer/other.webp" class="card-img-top object-fit-contain" alt="...">
       <div class="card-body " >
         <h5 class="card-title">other</h5>
       </div>
