--- a/views/card_description/item1.ejs
+++ b/views/card_description/item1.ejs
@@ -5,7 +5,7 @@
 
     <div class="card" style="width: 18rem;">
       <ul class="list-group list-group-flush">
-        <li class="list-group-item">waffle bread - vanilla</li>
+        <li class="list-group-item">waffle bread - vanilla + choclate</li>
         <li class="list-group-item">choclate coating - white choclate</li>
         <li class="list-group-item">toping - blue berry </li>
         <li class="list-group-item">sprinkels - abcdefgh</li>
@@ -14,5 +14,4 @@
   
   </div>
 
-
-
+  
