--- a/views/partials/footer.ejs
+++ b/views/partials/footer.ejs
@@ -22,19 +22,19 @@
         <a href="#" class="me-4 text-reset">
           <i class="fab fa-facebook-f"></i>
         </a>
-        <a href="#" class="me-4 text-reset">
+
+        <!-- <a href="#" class="me-4 text-reset">
           <i class="fab fa-twitter"></i>
-        </a>
+        </a> -->
+
         <a href="#" class="me-4 text-reset">
           <i class="fab fa-google"></i>
         </a>
         <a href="#" class="me-4 text-reset">
           <i class="fab fa-instagram"></i>
         </a>
-        <a href="#" class="me-4 text-reset">
-          <i class="fab fa-linkedin"></i>
-        </a>
-        <a href="https://github.com/Arunkumar-60/Express" class="me-4 text-reset">
+        
+        <a href="https://github.com/Arunkumar-60" class="me-4 text-reset">
           <i class="fab fa-github"></i>
         </a>
       </div>
@@ -51,7 +51,8 @@
             <h5 class="text-uppercase fw-bold mb-4">
               <i class="fas fa-solid fa-utensils " style="margin: 1rem;"></i>Creamy craving waffle
             </h5>
-           <h6>Lorem ipsum dolor sit amet consectetur adipisicing elit. Fugit animi esse iusto aliquid minus eos in excepturi, ducimus voluptatum nobis.</h6>
+           <h6>
+            We specialize in freshly made waffles adorned with a wide range of toppings, perfect for any occasion. Indulge in a heavenly treat on the move!</h6>
           </div>
          
   
@@ -60,13 +61,13 @@
           <div class="col-md-4 col-lg-3 col-xl-3 mx-auto mb-md-0 mb-4">
             <!-- links -->
             <h5  class="text-uppercase fw-bold mb-4">Contact</h5>
-            <h6><i class="fas fa-home me-3"></i>???---???---??-111111</h6>
+            <h6><i class="fas fa-home me-3"></i>Beside Reliance SMart, Korremula Rd, Chowdhariguda, Hyderabad, Telangana 5000881</h6>
             <h6>
               <i class="fas fa-envelope me-3"></i>
-              XYZ@gmail.com
+              susmithautkarsha@gmail.com
             </h6>
-            <h6><i class="fas fa-phone me-3"></i> + 91 123 456789</h6>
-            <h6><i class="fas fa-print me-3"></i> + 91 234 567 89</h6>
+            <h6><i class="fas fa-phone me-3"></i> + 91 9491296685</h6>
+            <h6><i class="fas fa-print me-3"></i> + 91 8698644007</h6>
           </div>
          
         </div>
@@ -76,6 +77,6 @@
     
     <div class="text-center p-4" style="background-color: rgba(0, 0, 0, 0.05);">
       Copyrights &copy; 2024
-      <a style="text-decoration: none;" class="text-reset fw-bold" href="/">creamycravingwaffle.com</a><br> - all rights preserved
+      <a style="text-decoration: none;" class="text-reset fw-bold" href="#">creamycravingwaffle.com</a><br> - all rights preserved
     </div>
-  </footer>
+</footer>
