--- a/views/index.ejs
+++ b/views/index.ejs
@@ -27,8 +27,27 @@
           data-bs-slide-to="2"
           aria-label="Slide 3"
         ></button>
+        <button
+          type="button"
+          data-bs-target="#carouselExampleCaptions"
+          data-bs-slide-to="3"
+          aria-label="Slide 4"
+        ></button>
+        <button
+          type="button"
+          data-bs-target="#carouselExampleCaptions"
+          data-bs-slide-to="4"
+          aria-label="Slide 5"
+        ></button>
+        <button
+          type="button"
+          data-bs-target="#carouselExampleCaptions"
+          data-bs-slide-to="5"
+          aria-label="Slide 6"
+        ></button>
       </div>
       <div class="carousel-inner">
+
         <div class="carousel-item active" data-bs-interval="3000">
           <img src="img/images/carousel/c1.webp" class="d-block w-100" alt="image for carousel slide 1"  />
           <div class="carousel-caption d-md-block">
@@ -38,6 +57,7 @@
             </p>
           </div>
         </div>
+
         <div class="carousel-item" data-bs-interval="3000">
           <img src="img/images/carousel/c2.webp" class="d-block w-100" alt="image for carousel slide 2" />
           <div class="carousel-caption d-md-block">
@@ -47,6 +67,7 @@
             </p>
           </div>
         </div>
+
         <div class="carousel-item" data-bs-interval="3000">
           <img src="img/images/carousel/c3.webp" class="d-block w-100" alt="image for carousel slide 3" />
           <div class="carousel-caption d-md-block">
@@ -56,6 +77,37 @@
             </p>
           </div>
         </div>
+
+        <div class="carousel-item" data-bs-interval="3000">
+          <img src="img/images/carousel/c4.webp" class="d-block w-100" alt="image for carousel slide 3" />
+          <div class="carousel-caption d-md-block">
+            <h5 id="arunchtr">fourth slide label</h5>
+            <p id="aruncdtr">
+              Some representative placeholder content for the third slide.
+            </p>
+          </div>
+        </div>
+
+        <div class="carousel-item" data-bs-interval="3000">
+          <img src="img/images/carousel/c5.webp" class="d-block w-100" alt="image for carousel slide 3" />
+          <div class="carousel-caption d-md-block">
+            <h5 id="arunchtr">fifth slide label</h5>
+            <p id="aruncdtr">
+              Some representative placeholder content for the third slide.
+            </p>
+          </div>
+        </div>
+
+        <div class="carousel-item" data-bs-interval="3000">
+          <img src="img/images/carousel/c6.webp" class="d-block w-100" alt="image for carousel slide 3" />
+          <div class="carousel-caption d-md-block">
+            <h5 id="arunchtr">sixth slide label</h5>
+            <p id="aruncdtr">
+              Some representative placeholder content for the third slide.
+            </p>
+          </div>
+        </div>
+
       </div>
       <button
         class="carousel-control-prev"
@@ -110,7 +162,7 @@
 
  <a href="/we_offer/large" style="text-decoration: none;"> 
   <div class="card" style="width: 18rem;">
-  <img src="img/images/we_offer/large.webp" class="card-img-top object-fit-contain " alt="...">
+  <img src="public/img/images/we_offer/large.webp" class="card-img-top object-fit-contain " alt="...">
   <div class="card-body">
     <h5 class="card-title">popsicle large waffles</h5>
   </div>
@@ -119,7 +171,7 @@
 
   <a href="/we_offer/medium" style="text-decoration: none;">
     <div class="card" style="width: 18rem;">
-      <img src="img/images/we_offer/medium.webp" class="card-img-top object-fit-contain " alt="...">
+      <img src="public/img/images/we_offer/medium.webp" class="card-img-top object-fit-contain " alt="...">
       <div class="card-body">
         <h5 class="card-title">popsicle medium waffles</h5>
         
@@ -151,7 +203,7 @@
 
   <a href="/we_offer/dining" style="text-decoration: none;">
     <div class="card" style="width: 18rem;">
-        <img src="img/images/we_offer/dining.webp" class="card-img-top" alt="...">
+        <img src="img/images/we_offer/dining.webp" class="card-img-top object-fit-contain" alt="...">
         <div class="card-body">
           <h5 class="card-title">dining</h5>
         </div>
@@ -160,7 +212,7 @@
 
     <a href="/we_offer/online_orders" style="text-decoration: none;">
         <div class="card" style="width: 18rem;">
-            <img src="img/images/we_offer/online.webp" class="card-img-top" alt="...">
+            <img src="img/images/we_offer/online.webp" class="card-img-top object-fit-contain" alt="...">
             <div class="card-body">
                 <h5 class="card-title">online orders</h5>
           
@@ -170,7 +222,7 @@
 
   <a href="/we_offer/event_hosting" style="text-decoration: none;">
     <div class="card" style="width: 18rem;">
-        <img src="img/images/we_offer/event.webp" class="card-img-top" alt="...">
+        <img src="img/images/we_offer/event.webp" class="card-img-top object-fit-contain" alt="...">
         <div class="card-body " >
           <h5 class="card-title">party/event hosting</h5>
         </div>
